# the-goodies

./: .blowingoff.json  .gitignore  CLAUDE.md  COVERAGE_REPORT.md  PHASE2_COMPLETE_SUMMARY.md  README.md  SECURITY_ARCHITECTURE.md  SECURITY_TEST_REPORT.md  UPGRADE.md  blowingoff.db-shm  error-logs.txt  funkygibbon.db-shm  homegraph_analysis_summary.md  human-test-analysis-report.md  install.sh  prompt-notes.md  prompt-notes.txt  pytest.ini  requirements.txt  running-logs.txt  test_auth.py  test_e2e_with_security.py  test_fixed_issue.py  test_graph_ops.py  test_homekit_fix_demo.py  test_homekit_models.py  test_multi_client_e2e.py  test_security_penetration.py  test_shared_mcp.py  test_shared_sync_metadata.py  test_sync_metadata.py  test_sync_metadata_api.py  testing-strategy-simplified.md
funkygibbon/: .gitignore  HUMAN_TESTING.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  __main__.py  backup.py  backup_scheduler.py  cli.py  config.py  conftest.py  database.py  demo_populated_db.py  env_loader.py  install.sh  main.py  migrate.py  populate_db.py  populate_graph_db.py  populate_homekit_db.py  pyproject.toml  pytest.ini  requirements.txt  run_server.py  seed_data.py  setup_auth.py  start.py  test_seeding.py
funkygibbon/api/: __init__.py  app.py  sync.py
funkygibbon/auth/: __init__.py  audit_logger.py  password.py  qr_code.py  rate_limiter.py  tokens.py
funkygibbon/examples/: demo_sync.py  test_sync.py
funkygibbon/graph/: __init__.py  index.py
funkygibbon/mcp/: __init__.py  server.py  tools.py
funkygibbon/models/: __init__.py  base.py  device.py  entity.py  entity_state.py  event.py  house.py  relationship.py  room.py  user.py
funkygibbon/repositories/: __init__.py  accessory.py  base.py  device.py  entity_state.py  event.py  graph.py  graph_impl.py  home.py  house.py  room.py  user.py
funkygibbon/search/: __init__.py  engine.py
funkygibbon/sync/: conflict_resolution.py  delta.py  versioning.py
funkygibbon/tests/: __init__.py  conftest.py  conftest_server.py  test_auth_hardening.py  test_backup.py  test_basic.py  test_homekit_models.py  test_migrate.py  test_setup_auth.py  test_sync.py  test_sync_protocol.py
oook/: README.md  __init__.py  __main__.py  cli.py  funkygibbon.db-shm  pyproject.toml  setup.py
oook/examples/: interactive_demo.py  simple_test.py  (+1 more)
(+292 files in other folders)
